--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <link rel="stylesheet" href="styles.css" />
   <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <style></style>
   </head>
   <body>
-    <h1 class="linear-wipe">Shine!</h1>
+    <div></div>
   </body>
-  <div></div>
 </html>
